// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AsyncSeriesBailHook > callAsync empty 1`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync empty 2`] = `
[
  [
    1,
  ],
  [
    2,
  ],
  [
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi return error 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi return error 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  "end",
  [],
]
`;

exports[`AsyncSeriesBailHook > callAsync single return error 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync single return error 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    [Error: error-2],
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > callAsync single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  "end",
  [
    null,
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise reject multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise reject multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise reject single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise reject single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "error",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve multi 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve multi 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "hooks",
    0,
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve multi return value 1`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve multi return value 2`] = `
[
  [
    "hooks",
    0,
    1,
  ],
  [
    "hooks",
    0,
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve single 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve single 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "hooks",
    3,
  ],
  [
    "end",
  ],
  [
    undefined,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve single return value 1`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;

exports[`AsyncSeriesBailHook > promise resolve single return value 2`] = `
[
  [
    "hooks",
    1,
  ],
  [
    "hooks",
    2,
  ],
  [
    "end",
  ],
  [
    4,
  ],
]
`;
